--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@ header, footer {
     padding: 10px 0;
 }
 
+footer {
+    background-color: #000;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+}
+
 section {
     padding: 20px;
     text-align: center;
